--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -3,108 +3,161 @@
 {% block content %}
 {% load staticfiles %}
 
-<div>{{totalTime}}</div>
-{% for user in users %}
-<div>{{user.username}} - {{user.time}} - {{user.timepc}}</div>
-{% endfor %}
 
+<div class = "row">
+    <div class="col-xs-6">
 Vous êtes {{user.username}}
+    </div>
+    
+    <div  class="col-xs-6">
+        <img id="stats" src="{% static 'mainapp/png/stats.png' %}" onclick="document.location.href='/statistics/'"/>
+    </div>
+</div>
+
 
 {% if goingPn.user == request.user %}
-    <img id="greenButton" src="{% static 'mainapp/png/greenButton.png' %}" />
+<div class = "row">
+    <div id="" class="col-xs-12">
+        <img id="greenButton" src="{% static 'mainapp/png/greenOk.png' %}" />
+    </div>     
+</div>
+<div class = "row">
+    <div id="goingMessage" class="col-xs-12">
+    {% if goingPn.linkedToPn %}
+        Vous répondez à {{goingPn.linkedToPn.user.username}} sur l'intervention {{goingPn.linkedToPn.id}}
+    {% else %}
+        Nouvelle participation    
+    {% endif %}
+    </div>     
+</div>
+    
 {% endif %}
+
+Il y a {{allWaitingCount}} demande(s) de prise de parole
 
 <div class="table-responsive">
   <table class="table">
+  
+    {% if nextPn %}
+  
     <tr id ="nextRow">
-        <td class="pnId">{{nextPn.id}}</td>
+        <td id="{{nextPn.id}}" class="pnId">{{nextPn.id}}{% if nextPn.linkedToPn %} ({{nextPn.linkedToPn.id}}){% endif %}</td>
         <td class="username">{{nextPn.user.username}}</td>
-        <td></td>
+        <td class="duration" >Prochaine</td>
         <td class="waiting"></td>
     </tr>
+    
+    {% endif %}
+    
+    {% if goingPn %}
+    
     <tr id="currentRow">
-        <td class="pnId">{{goingPn.id}}</td>
+        <td id="{{goingPn.id}}" class="pnId">{{goingPn.id}}{% if goingPn.linkedToPn %} ({{goingPn.linkedToPn.id}}){% endif %}</td>
         <td class="username">{{goingPn.user.username}}</td>
-        <td></td>
-        <td class="waiting"></td>
+        <td class="duration">En cours</td>
+        <td class="waiting">{% if goingPn.wtPnType %}<img class="smallAnswer" src="{% static 'mainapp/png/smallAnswerGrey.png' %}">{%endif%}</td>
     </tr>
+    
+    {% endif %}
+    
     {% for pn in oldPns %}
     <tr class="previousRows">
-        <td class="pnId">{{pn.id}}</td>
+        <td id="{{pn.id}}" class="pnId">{{pn.id}}{% if pn.linkedToPn %} ({{pn.linkedToPn.id}}){% endif %}</td>
         <td class="username">{{pn.user.username}}</td>
-        <td>{{pn.timeDiff}}</td>
-        <td class="waiting">{{pn.wtPnType}}</td>
+        <td class="duration">{{pn.minutes|floatformat:"0"}}:{{pn.seconds|stringformat:"02d"}}</td>
+        <td class="waiting">{% if pn.wtPnType %}<img class="smallAnswer" src="{% static 'mainapp/png/smallAnswerGrey.png' %}">{%endif%}</td>
     </tr>    
     {% endfor %}
     
   </table>
 </div>
 
+
+
+
 <div id="buttonsFooter">
 
-    <div class="buts" id="firstBut">
-        <img class="butImg" src="{% static 'mainapp/png/firstBut.png' %}">
+    <div class="buts" id="answerBut">
+        <img class="butImg" src="{% static 'mainapp/png/answerBut.png' %}">
     </div>
-    <div class="buts" id="secondBut">
+<!--    <div class="buts" id="secondBut">
         <img class="butImg" src="{% static 'mainapp/png/secondBut.png' %}">
+    </div> -->
+    
+   
+    
+    <div class="buts" id="loveBut">
+        <img class="butImg" src="{% static 'mainapp/png/loveBut.png' %}">
     </div>
-    <div class="buts" id="thirdBut">
-        <img class="butImg" src="{% static 'mainapp/png/thirdBut.png' %}">
-    </div>
+    
+    <div class="buts" id="newBut">
+        <img class="butImg" src="{% static 'mainapp/png/newBut.png' %}">
+    </div>     
 
 </div>
 
 
 
 <script>
+
+    {% if newPn %}
+        $("#newBut").css('background-color','grey');
+    {% endif %}
+
+    $("#answerBut,#loveBut").css('background-color','darkblue');
+    
     
     var $selectedtr;
 
     $('tr').click(function(){
     
-           $('.buts').css('background-color','black');
+           $('#answerBut').css('background-color','black');
            $('tr').css('background-color','');
            $('tr').css('color','black');
            $(this).css('background-color','black');
            $(this).css('color','white');
            $selectedtr = $(this);
            
-           $waiting = $(this).find(".waiting").eq(0).text();
+           $waiting = $(this).find(".waiting").eq(0).html();
 
-           if ($waiting == "Answer"){
-                $('#firstBut').css('background-color','grey');
-           } else if ($waiting == "Question"){
-                $('#secondBut').css('background-color','grey');
-           }
+           if ($waiting != null && $waiting != '' ){
+                $('#answerBut').css('background-color','grey');
+           } 
            
            $user = $(this).find(".username").eq(0).text();
+           $status = $(this).find('.duration').eq(0).text();
+           console.log($status);
            
-           if ($user == '{{user.username}}') {
-                $(".buts").css('background-color','darkblue');
+           if ($user == '{{user.username}}' || $status == 'Prochaine' ) {
+                $('#answerBut').css('background-color','darkblue');
            };
            
     })
     
-    $('#firstBut').click(function(){
-        $id = $selectedtr.find('.pnId').eq(0).text();
-        $user = $selectedtr.find(".username").eq(0).text();
-        
-        if ($user != '{{user.username}}') { 
-        
-            $.post('/butHandler/',
-                {
-                    'csrfmiddlewaretoken': '{{ csrf_token }}',
-                    'id': $id,
-                    'type': '0'
-                }, 
-                function(data) {
-                    location.reload();
-                });
+    $('#answerBut').click(function(){
+        if($selectedtr){
+    
+            $id = $selectedtr.find('.pnId').eq(0).attr('id')
+            $user = $selectedtr.find(".username").eq(0).text();
+            $status = $selectedtr.find('.duration').eq(0).text();
+            
+            if ($user != '{{user.username}}' && $status != 'Prochaine') { 
+            
+                $.post('/butHandler/',
+                    {
+                        'csrfmiddlewaretoken': '{{ csrf_token }}',
+                        'id': $id,
+                        'type': '0'
+                    }, 
+                    function(data) {
+                        location.reload();
+                    });
+            }
         }
-        
     })    
 
-    $('#secondBut').click(function(){
+
+/*    $('#secondBut').click(function(){
     
         $id = $selectedtr.find('.pnId').eq(0).text();
         $user = $selectedtr.find(".username").eq(0).text();
@@ -120,10 +173,18 @@ Vous êtes {{user.username}}
                     location.reload();
                 }); 
         }   
-    })    
+    })   */
     
-    $('#thirdBut').click(function(){
-
+    $('#newBut').click(function(){
+    
+        $.post('/newHandler/',
+            {
+                'csrfmiddlewaretoken': '{{ csrf_token }}'
+            }, 
+            function(data) {
+                location.reload();
+            });   
+    
     })  
 
     $('#greenButton').click(function(){
