--- a/mainapp/templates/mainapp/statistics.html
+++ b/mainapp/templates/mainapp/statistics.html
@@ -3,41 +3,50 @@
 {% block content %}
 {% load staticfiles %}
 
+<div class = "row">
+    <div id="totalTime" class="col-xs-6">
+    Temps total : {{minutes|floatformat:"0"}}:{{seconds|stringformat:"02d"}}
+    </div>
+    <div id="" class="col-xs-6">
+        <img id="stats" src="{% static 'mainapp/png/home.png' %}" onclick="document.location.href='/'"/>
+    </div>
+</div>
+
+<div class = "row">
+    <div id="totalTime" class="col-xs-12">
+        <div id="chart_div" style="width: 100%;"></div>
+    </div>
+</div>
 
 
-
-<div id="chart_div" style="width: 900px; height: 500px;"></div>
-
-<div>{{totalTime}}</div>
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
-      google.charts.load('current', {'packages':['corechart', 'bar']});
-      google.charts.setOnLoadCallback(drawVisualization);
+<script type="text/javascript">
+  google.charts.load('current', {'packages':['corechart', 'bar']});
+  google.charts.setOnLoadCallback(drawVisualization);
 
 
-      function drawVisualization() {
-        // Some raw data (not necessarily accurate)
-        var data = google.visualization.arrayToDataTable([
-         ['Participant', 'Temps', 'Moyenne'],
-         
-         {% for user in users %}
-            ['{{user.username}}',  {{user.timePC}}*100,    {{theoricTimePC}}*100],
-         {% endfor %}
+  function drawVisualization() {
+    // Some raw data (not necessarily accurate)
+    var data = google.visualization.arrayToDataTable([
+     ['Participant', 'Temps', 'Moyenne'],
+     
+     {% for user in users %}
+        ['{{user.username}}',  {{user.timePC}}*100,    {{theoricTimePC}}*100],
+     {% endfor %}
 
-      ]);
+  ]);
 
-    var options = {
-      width:500,
-      vAxis: {title: '% Temps de parole'},
-      hAxis: {title: 'Participants'},
-      seriesType: 'bars',
-      series: {1: {type: 'line'}}
-    };
+var options = {
+  chartArea: {width: '70%'},
+  hAxis: {title: '% Temps de parole'},
+  seriesType: 'bars',
+  series: {1: {type: 'line'}}
+};
 
-    var chart = new google.visualization.ComboChart(document.getElementById('chart_div'));
-    chart.draw(data, options);
-  }
-    </script>
+var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
+chart.draw(data, options);
+}
+</script>
 
 {% endblock %}
