--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -4,13 +4,18 @@
 {% load staticfiles %}
 
 
+
 <div class = "row">
-    <div class="col-xs-6">
-Vous êtes {{user.username}}
+    <div class="col-xs-4">
+{{user.username}} <audio id="audioPlayer" src=""></audio>
     </div>
     
-    <div  class="col-xs-6">
-        <img id="stats" src="{% static 'mainapp/png/stats.png' %}" onclick="document.location.href='/statistics/'"/>
+    <div  class="col-xs-4">
+        <img id ="sound" src="{% static 'mainapp/png/sound.png' %}">
+    </div>
+    
+    <div  class="col-xs-4">
+        <img id="stats" src="{% static 'mainapp/png/stats.png' %}" onclick="document.location.href='/statistics/'"/>        
     </div>
 </div>
 
@@ -30,7 +35,26 @@ Vous êtes {{user.username}}
     {% endif %}
     </div>     
 </div>
-    
+
+{% elif goingPn %}
+<div class = "row">
+    <div id="goingMessage" class="col-xs-12">
+    {% if goingPn.linkedToPn %}
+        {{goingPn.user.username}} répond à {{goingPn.linkedToPn.user.username}}
+    {% else %}
+        Nouvelle participation de {{goingPn.user.username}} 
+    {% endif %}
+    </div>     
+</div>
+
+{% else %}
+
+<div class = "row">
+    <div id="goingMessage" class="col-xs-12">
+    Pas de demande de parole
+    </div>     
+</div>
+
 {% endif %}
 
 Il y a {{allWaitingCount}} demande(s) de prise de parole
@@ -45,6 +69,7 @@ Il y a {{allWaitingCount}} demande(s) de prise de parole
         <td class="username">{{nextPn.user.username}}</td>
         <td class="duration" >Prochaine</td>
         <td class="waiting"></td>
+        <td class="audio" hidden></td>
     </tr>
     
     {% endif %}
@@ -56,6 +81,7 @@ Il y a {{allWaitingCount}} demande(s) de prise de parole
         <td class="username">{{goingPn.user.username}}</td>
         <td class="duration">En cours</td>
         <td class="waiting">{% if goingPn.wtPnType %}<img class="smallAnswer" src="{% static 'mainapp/png/smallAnswerGrey.png' %}">{%endif%}</td>
+        <td class="audio" hidden></td>
     </tr>
     
     {% endif %}
@@ -66,6 +92,7 @@ Il y a {{allWaitingCount}} demande(s) de prise de parole
         <td class="username">{{pn.user.username}}</td>
         <td class="duration">{{pn.minutes|floatformat:"0"}}:{{pn.seconds|stringformat:"02d"}}</td>
         <td class="waiting">{% if pn.wtPnType %}<img class="smallAnswer" src="{% static 'mainapp/png/smallAnswerGrey.png' %}">{%endif%}</td>
+        <td class="audio" hidden>{{pn.soundFile}}</td>
     </tr>    
     {% endfor %}
     
@@ -126,7 +153,7 @@ Il y a {{allWaitingCount}} demande(s) de prise de parole
            
            $user = $(this).find(".username").eq(0).text();
            $status = $(this).find('.duration').eq(0).text();
-           console.log($status);
+
            
            if ($user == '{{user.username}}' || $status == 'Prochaine' ) {
                 $('#answerBut').css('background-color','darkblue');
@@ -198,6 +225,38 @@ Il y a {{allWaitingCount}} demande(s) de prise de parole
         
     });
     
+    $('#sound').click(function(){
+        $audioPlayer = document.getElementById("audioPlayer");
+        
+        
+        if($audioPlayer.paused){     
+            $sf = 'http://localhost:8000/media/'+$selectedtr.find('.audio').eq(0).text();                     
+            $("#audioPlayer").attr("src", $sf );
+            $audioPlayer.play();
+        } else {
+            $audioPlayer.pause();
+        }
+        
+    });    
+    
+</script>
+
+<script>
+// Note that the path doesn't matter right now; any WebSocket
+// connection gets bumped over to WebSocket consumers
+socket = new WebSocket("ws://" + window.location.host + "/chat/");
+
+socket.onmessage = function(e) {
+
+    if (e.data == "YALA") {  
+        location.reload();
+    }
+}
+socket.onopen = function() {
+    socket.send("hello!!!");
+}
+// Call onopen directly if socket is already open
+if (socket.readyState == WebSocket.OPEN) socket.onopen();
 </script>
 
 {% endblock %}
