--- a/mainapp/templates/mainapp/statistics.html
+++ b/mainapp/templates/mainapp/statistics.html
@@ -1,4 +1,4 @@
-﻿{% extends 'mainapp/base.html' %}
+{% extends 'mainapp/base.html' %}
 {% block title %}Test{% endblock %}
 {% block content %}
 {% load staticfiles %}
