--- a/mainapp/templates/mainapp/test.html
+++ b/mainapp/templates/mainapp/test.html
@@ -12,11 +12,15 @@
 // Note that the path doesn't matter right now; any WebSocket
 // connection gets bumped over to WebSocket consumers
 socket = new WebSocket("ws://" + window.location.host + "/chat/");
+
 socket.onmessage = function(e) {
-    console.log(e.data);
+
+    if (e.data == "YALA") {  
+        location.reload();
+    }
 }
 socket.onopen = function() {
-    socket.send("hello HAHAHA");
+    socket.send("hello!!!");
 }
 // Call onopen directly if socket is already open
 if (socket.readyState == WebSocket.OPEN) socket.onopen();
