--- a/mainapp/templates/mainapp/statistics.html
+++ b/mainapp/templates/mainapp/statistics.html
@@ -8,7 +8,7 @@
     Temps total : {{minutes|floatformat:"0"}}:{{seconds|stringformat:"02d"}}
     </div>
     <div id="" class="col-xs-6">
-        <img id="stats" src="{% static 'mainapp/png/home.png' %}" onclick="document.location.href='/'"/>
+        <img id="stats" src="{% static 'mainapp/png/home.png' %}" onclick="document.location.href='/debat/{{iddebate}}'"/>
     </div>
 </div>
 
@@ -17,8 +17,6 @@
         <div id="chart_div" style="width: 100%;"></div>
     </div>
 </div>
-
-
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
