--- a/mainapp/templates/mainapp/reports.html
+++ b/mainapp/templates/mainapp/reports.html
@@ -38,7 +38,7 @@
     <div class="col-xs-6">
         <div class = "row">
             <div class="col-xs-12">
-                Réponse à :
+                Cette participation répond à :
             </div>
         </div>
         <div id="answersTo" class = "row">
@@ -46,7 +46,7 @@
         
         <div class = "row">
             <div class="col-xs-12">
-                Est répondu par :
+                Les réponses suivantes ont été données :
             </div>
         </div>        
         
