--- a/mainapp/static/mainapp/css/firstStyle.css
+++ b/mainapp/static/mainapp/css/firstStyle.css
@@ -175,6 +175,7 @@ body{
     position:fixed;
     bottom:0px;
     left:0px;
+    z-index:3;
 }
 
 #filtersContainer{
@@ -184,3 +185,22 @@ body{
 .pnrow{
     cursor: pointer;
 }
+
+#startDebate{
+    position:absolute;
+    top:10px;
+    height:20%;
+    width:100%;
+    background-color:yellow;
+    text-align:center;
+}
+
+#stopParticipation{
+    position:absolute;
+    bottom: 10px;
+    height:20%;
+    width:100%;
+    background-color:orange;  
+    text-align:center;  
+}
+
