--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -19,7 +19,11 @@
     
     <script src="{% static 'mainapp/js/jquery.min.js' %}"></script>
     <script src="{% static 'mainapp/js/bootstrap.min.js' %}"></script>
-    
+   
+    {% block head %}
+    {% endblock %}
+
+   
 </head>
 <body>
 
