--- a/mainapp/templates/mainapp/reports.html
+++ b/mainapp/templates/mainapp/reports.html
@@ -1,5 +1,30 @@
 {% extends 'mainapp/base.html' %}
 {% block title %}Test{% endblock %}
+
+{% block head %}
+<style>
+    .node rect {
+      cursor: pointer;
+      fill: #fff;
+      fill-opacity: .5;
+      stroke: #3182bd;
+      stroke-width: 1.5px;
+    }
+
+    .node text {
+      font: 10px sans-serif;
+      pointer-events: none;
+    }
+
+    path.link {
+      fill: none;
+      stroke: #9ecae1;
+      stroke-width: 1.5px;
+    }
+
+</style>
+{% endblock %}
+
 {% block content %}
 {% load staticfiles %}
 
@@ -22,7 +47,7 @@
     <div class="col-xs-6">
         <div class = "row">
             <div class="col-xs-12">
-                Les participations :
+                Les participations dans l'ordre :
             </div>
         </div>
     
@@ -61,10 +86,12 @@
 
 
 <div class = "row">
-    <div id="totalTime" class="col-xs-12">
+    <div class="col-xs-12">
         <div id="chart_div" style="width: 100%;"></div>
     </div>
 </div>
+
+
 
 <script>
 
@@ -101,35 +128,257 @@
     });    
     
 </script>
+<!-- <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script> -->
+<!-- <script type="text/javascript"> -->
+  <!-- google.charts.load('current', {'packages':['corechart', 'bar']}); -->
+  <!-- google.charts.setOnLoadCallback(drawVisualization); -->
 
 
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script type="text/javascript">
-  google.charts.load('current', {'packages':['corechart', 'bar']});
-  google.charts.setOnLoadCallback(drawVisualization);
-
-
-  function drawVisualization() {
-    // Some raw data (not necessarily accurate)
-    var data = google.visualization.arrayToDataTable([
-     ['Participant', 'Temps', 'Moyenne'],
+  <!-- function drawVisualization() { -->
+    <!-- // Some raw data (not necessarily accurate) -->
+    <!-- var data = google.visualization.arrayToDataTable([ -->
+     <!-- ['Participant', 'Temps', 'Moyenne'], -->
      
-     {% for user in users %}
-        ['{{user.username}}',  {{user.timePC}}*100,    {{theoricTimePC}}*100],
-     {% endfor %}
+     <!-- {% for user in users %} -->
+        <!-- ['{{user.username}}',  {{user.timePC}}*100,    {{theoricTimePC}}*100], -->
+     <!-- {% endfor %} -->
 
-  ]);
+  <!-- ]); -->
 
-var options = {
-  chartArea: {width: '70%'},
-  hAxis: {title: '% Temps de parole'},
-  seriesType: 'bars',
-  series: {1: {type: 'line'}}
-};
+<!-- var options = { -->
+  <!-- chartArea: {width: '70%'}, -->
+  <!-- hAxis: {title: '% Temps de parole'}, -->
+  <!-- seriesType: 'bars', -->
+  <!-- series: {1: {type: 'line'}} -->
+<!-- }; -->
 
-var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
-chart.draw(data, options);
+<!-- var chart = new google.visualization.BarChart(document.getElementById('chart_div')); -->
+<!-- chart.draw(data, options); -->
+<!-- } -->
+<!-- </script> -->
+
+
+<!-- Tree -->
+<script src="//d3js.org/d3.v3.min.js"></script>
+<script>
+
+var margin = {top: 30, right: 20, bottom: 30, left: 20},
+    width = 960 - margin.left - margin.right,
+    barHeight = 20,
+    <!-- barWidth = width * .8; -->
+    barWidth = 200;
+    
+var i = 0,
+    duration = 400,
+    root;
+
+var tree = d3.layout.tree()
+    .nodeSize([0, 20]);
+
+var diagonal = d3.svg.diagonal()
+    .projection(function(d) { return [d.y, d.x]; });
+
+var svg = d3.select("body").append("svg")
+    .attr("width", width + margin.left + margin.right)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+d3.json("/media/{{debate.jsonFile}}", function(error, flare) {
+  if (error) throw error;
+
+  flare.x0 = 0;
+  flare.y0 = 0;
+  update(root = flare);
+});
+
+function update(source) {
+
+  // Compute the flattened node list. TODO use d3.layout.hierarchy.
+  var nodes = tree.nodes(root);
+
+  var height = Math.max(500, nodes.length * barHeight + margin.top + margin.bottom);
+
+  d3.select("svg").transition()
+      .duration(duration)
+      .attr("height", height);
+
+  d3.select(self.frameElement).transition()
+      .duration(duration)
+      .style("height", height + "px");
+
+  // Compute the "layout".
+  nodes.forEach(function(n, i) {
+    n.x = i * barHeight;
+  });
+
+  // Update the nodes…
+  var node = svg.selectAll("g.node")
+      .data(nodes, function(d) { return d.id || (d.id = ++i); });
+
+  var nodeEnter = node.enter().append("g")
+      .attr("class", "node")
+      .attr("transform", function(d) { return "translate(" + source.y0 + "," + source.x0 + ")"; })
+      .style("opacity", 1e-6);
+
+  // Enter any new nodes at the parent's previous position.
+  nodeEnter.append("rect")
+      .attr("y", -barHeight / 2)
+      .attr("height", barHeight)
+      .attr("width", 20)
+      .style("fill", color)
+      .on("click", click);
+      
+  nodeEnter.append("rect")
+      .attr("y", -barHeight / 2)
+      .attr("x", 55)
+      .attr("height", barHeight)
+      .attr("width", 1/2*barWidth)
+      .style("fill", colorNames); 
+
+  nodeEnter.append("rect")
+      .attr("y", -barHeight / 2)
+      .attr("x", 55 + 40 + 1/2*barWidth)
+      .attr("height", barHeight)
+      .attr("width", 20)
+      .style("fill", 'white')
+      .on("click", clickSound);
+      
+
+  nodeEnter.append("text")
+      .attr("dy", 3.5)
+      .attr("dx", 55 + 80 + 1/2*barWidth)
+      .text(function(d) { return d.id; });
+
+  nodeEnter.append("text")
+      .attr("dy", 3.5)
+      .attr("dx", 60)
+      .text(function(d) { return d.name; });      
+   
+    nodeEnter.append("svg:image")
+      .attr("x", 55 + 40 + 1/2*barWidth)
+       .attr('y',-barHeight / 2)
+       .attr('width', 18)
+       .attr('height', 18)
+       .on("click", clickSound)
+       .attr("xlink:href", soundOrNot)
+       
+   
+      
+  <!-- nodeEnter.append("text") -->
+      <!-- .attr("dy", 3.5) -->
+      <!-- .attr("dx", 5.5) -->
+      <!-- .text("WALA");     -->
+      
+
+  // Transition nodes to their new position.
+  nodeEnter.transition()
+      .duration(duration)
+      .attr("transform", function(d) { return "translate(" + d.y + "," + d.x + ")"; })
+      .style("opacity", 1);
+
+  node.transition()
+      .duration(duration)
+      .attr("transform", function(d) { return "translate(" + d.y + "," + d.x + ")"; })
+      .style("opacity", 1)
+    .select("rect")
+      .style("fill", color);
+
+  // Transition exiting nodes to the parent's new position.
+  node.exit().transition()
+      .duration(duration)
+      .attr("transform", function(d) { return "translate(" + source.y + "," + source.x + ")"; })
+      .style("opacity", 1e-6)
+      .remove();
+
+  // Update the links…
+  var link = svg.selectAll("path.link")
+      .data(tree.links(nodes), function(d) { return d.target.id; });
+
+  // Enter any new links at the parent's previous position.
+  link.enter().insert("path", "g")
+      .attr("class", "link")
+      .attr("d", function(d) {
+        var o = {x: source.x0, y: source.y0};
+        return diagonal({source: o, target: o});
+      })
+    .transition()
+      .duration(duration)
+      .attr("d", diagonal);
+
+  // Transition links to their new position.
+  link.transition()
+      .duration(duration)
+      .attr("d", diagonal);
+
+  // Transition exiting nodes to the parent's new position.
+  link.exit().transition()
+      .duration(duration)
+      .attr("d", function(d) {
+        var o = {x: source.x, y: source.y};
+        return diagonal({source: o, target: o});
+      })
+      .remove();
+
+  // Stash the old positions for transition.
+  nodes.forEach(function(d) {
+    d.x0 = d.x;
+    d.y0 = d.y;
+  });
+}
+
+// Toggle children on click.
+function click(d) {
+  if (d.children) {
+    d._children = d.children;
+    d.children = null;
+  } else {
+    d.children = d._children;
+    d._children = null;
+  }
+  update(d);
+}
+
+function clickSound(d) {
+  console.log(d);
+  $("#audioPlayer").attr("src", d['sound']);
+  player.play();
+  
+}
+
+function color(d) {
+  return d._children ? "#3182bd" : d.children ? "#c6dbef" : "#fd8d3c";
+}
+
+
+$names = [];
+$corNamesColor = {};
+$iNames = 0;
+function colorNames(d){
+  
+    
+    $colors = ["#ffd480","#99ffff","#80ffaa","#9999ff","#e580ff","#df9fbf","#adc2eb","#ddff99","#ddff99"]
+    
+    //si le nom n'est pas deja dans l'array, on créé une correspondance
+    if ( $.inArray(d.name, $names) == -1){
+        $names.push(d.name);
+        $corNamesColor[d.name] = $colors[$iNames];
+        $iNames = $iNames + 1;
+    }
+    
+    return $corNamesColor[d.name]
+    
+    
+}
+
+function soundOrNot(d){
+
+    if (d.sound != null && d.sound != 'None') {
+        return "{% static 'mainapp/png/sound.png' %}"
+    } else {
+        return null
+    }
 }
 </script>
+
 
 {% endblock %}
