--- a/mainapp/templates/mainapp/reports.html
+++ b/mainapp/templates/mainapp/reports.html
@@ -33,8 +33,11 @@
 <div id="filtersContainer" class = "row">
     <div id="totalTime" class="col-xs-12">
         <div>
-            Retour sur le débat "{{debate.theme}}" - Temps total : {{minutes|floatformat:"0"}}:{{seconds|stringformat:"02d"}}
+            <span class="title1">"{{debate.theme}}"</span>
         </div>
+        
+        <div>Temps total : {{minutes|floatformat:"0"}}:{{seconds|stringformat:"02d"}}</div>
+        
         <div>
             <!-- <audio controls id="audioPlayer" src=""></audio> -->
             
@@ -43,54 +46,84 @@
     </div>
 </div>
 
-<div id="" class = "row">
-    <div class="col-xs-6">
-        <div class = "row">
-            <div class="col-xs-12">
-                Les participations dans l'ordre :
-            </div>
-        </div>
-    
-      {% for pn in pns %}
-        <div id="{{pn.id}}" linkedToPn="{{pn.linkedToPn.id}}" class = "row pnrow">           
-           <div class="col-xs-12">
-            {{forloop.counter}}. {{pn.user.username}} ({{pn.minutes|floatformat:"0"}}:{{pn.seconds|stringformat:"02d"}}) ({{pn.likes}} likes) - <img class="soundLogo" src="{% static 'mainapp/png/sound.png' %}" id="/media/{{pn.soundFile}}" />
-           </div>         
-        </div>        
-      {% endfor %}
-    </div>
-    
-    <div class="col-xs-6">
-        <div class = "row">
-            <div class="col-xs-12">
-                Cette participation répond à :
-            </div>
-        </div>
-        <div id="answersTo" class = "row">
-        </div>
-        
-        <div class = "row">
-            <div class="col-xs-12">
-                Les réponses suivantes ont été données :
-            </div>
-        </div>        
-        
-        <div id="answeredBy" class = "row">
-           
-        </div>        
-        
-    
-    </div>    
-    
-</div>
-
 
 <div class = "row">
     <div class="col-xs-12">
-        <div id="chart_div" style="width: 100%;"></div>
+        <span class="title1">Ordre chronologique :</span>
+    </div>
+</div>
+    
+{% for pn in pns %}
+<div id="{{pn.id}}" linkedToPn="{{pn.linkedToPn.id}}" class = "row pnrow">           
+   <div class="col-xs-12">
+    <!-- {{forloop.counter}}. {{pn.user.username}} ({{pn.minutes|floatformat:"0"}}:{{pn.seconds|stringformat:"02d"}}) ({{pn.likes}} likes) - <img class="soundLogo" src="{% static 'mainapp/png/sound.png' %}" id="/media/{{pn.soundFile}}" /> -->
+    {{forloop.counter}}. {{pn.user.username}} ({{pn.pk}}) <img class="soundLogo" src="{% static 'mainapp/png/sound.png' %}" id="/media/{{pn.soundFile}}" />
+   </div>         
+</div>        
+{% endfor %}
+
+    
+    <!-- <div class="col-xs-6"> -->
+        <!-- <div class = "row"> -->
+            <!-- <div class="col-xs-12"> -->
+                <!-- Cette participation répond à : -->
+            <!-- </div> -->
+        <!-- </div> -->
+        <!-- <div id="answersTo" class = "row"> -->
+        <!-- </div> -->
+        
+        <!-- <div class = "row"> -->
+            <!-- <div class="col-xs-12"> -->
+                <!-- Les réponses suivantes ont été données : -->
+            <!-- </div> -->
+        <!-- </div>         -->
+        
+        <!-- <div id="answeredBy" class = "row"> -->
+           
+        <!-- </div>         -->
+        
+    
+    <!-- </div>     -->
+    
+
+<div class = "row">
+    <div class="col-xs-12">
+        <span class="title1">Ordre de réponse :</span>
     </div>
 </div>
 
+<div class = "row">
+    <div id="graphContainer" class="col-xs-12">
+        
+    </div>
+</div>
+
+
+<!-- <div class = "row"> -->
+    <!-- <div class="col-xs-12"> -->
+        <!-- <div id="chart_div" style="width: 100%;"></div> -->
+    <!-- </div> -->
+<!-- </div> -->
+<div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://cafedebapp.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
 
 <script>
@@ -103,8 +136,7 @@
     });
     
     $('.pnrow').click(function(event){
-        console.log($(this).attr('id'));
-        console.log($(this).attr('linkedToPn'));
+
         
         //Colors
         $('.pnrow').css('background-color','');
@@ -178,7 +210,7 @@ var tree = d3.layout.tree()
 var diagonal = d3.svg.diagonal()
     .projection(function(d) { return [d.y, d.x]; });
 
-var svg = d3.select("body").append("svg")
+var svg = d3.select("#graphContainer").append("svg")
     .attr("width", width + margin.left + margin.right)
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
@@ -339,7 +371,7 @@ function click(d) {
 }
 
 function clickSound(d) {
-  console.log(d);
+
   $("#audioPlayer").attr("src", d['sound']);
   player.play();
   
